Test Org - Speridian/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <label>Employee Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_BehavioralHealth__c</fullName>
        <label>Behavioral Health</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_COBRAMember__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COBRA Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ba_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Contact Name)</relationshipLabel>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_CustomerNumber__c</fullName>
        <displayFormat>MEM{00000000}</displayFormat>
        <label>Customer Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ba_CustomerType__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Group Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_DESCaseNumber__c</fullName>
        <label>DES Case Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_ExchangeMemberID__c</fullName>
        <label>Exchange Member ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Gender__c</fullName>
        <label>Gender</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_Language__c</fullName>
        <label>Language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_MaritalStatus__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Unmarried</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_MedicareNumber__c</fullName>
        <label>Medicare Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_MemberNumber__c</fullName>
        <label>Member Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_MemberType__c</fullName>
        <label>Member Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscriber</fullName>
                </value>
                <value>
                    <fullName>Dependent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_ParentMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Parent Member)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_PrimaryPCP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary PCP</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_QMB__c</fullName>
        <label>QMB</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_RatingCity__c</fullName>
        <label>Rating City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_RatingCounty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rating County</label>
        <referenceTo>BA_Zipcode_Admin__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_RatingZipcode__c</fullName>
        <label>Rating Zipcode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_ReinstateDate__c</fullName>
        <label>Reinstate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_Relation1__c</fullName>
        <label>Relation</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Group Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_Relation__c</fullName>
        <label>Relation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self</fullName>
                </value>
                <value>
                    <fullName>Dependent</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_RenewalDate__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_SSN__c</fullName>
        <label>SSN</label>
        <length>9</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ba_TerminationDate__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_TerminationReasonDescription__c</fullName>
        <label>Termination Reason Description</label>
        <length>3500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ba_TerminationReason__c</fullName>
        <label>Termination Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Request</fullName>
                </value>
                <value>
                    <fullName>Non Payment</fullName>
                </value>
                <value>
                    <fullName>Non Eligible</fullName>
                </value>
                <value>
                    <fullName>Carrier Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_TobaccoUse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tobacco Use In Last 6 Months</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>recordtype__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subscriber</fullName>
                </value>
                <value>
                    <fullName>Dependent</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Authorized Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Test_view</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>Test view</label>
    </listViews>
    <recordTypes>
        <fullName>BA_AuthorizedContact</fullName>
        <active>true</active>
        <label>Authorized Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>BA_Producer</fullName>
        <active>true</active>
        <label>Producer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dependent</fullName>
        <active>true</active>
        <label>Dependent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Member</fullName>
        <active>true</active>
        <label>Member</label>
    </recordTypes>
    <recordTypes>
        <fullName>Subscriber</fullName>
        <active>true</active>
        <description>same as contact object</description>
        <label>Subscriber</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>